--- a/src/main/resources/templates/animal/animalDetail.html
+++ b/src/main/resources/templates/animal/animalDetail.html
@@ -7,5 +7,7 @@
 <body>
 <p th:text="${animal.getId()}"></p>
 <p th:text="${animal.getName()}"></p>
+<p th:text="${animal.getType()}"></p>
+<p th:text="${animal.getAmount()}"></p>
 </body>
 </html>
