--- a/src/main/resources/templates/countries/countryDetail.html
+++ b/src/main/resources/templates/countries/countryDetail.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Детали животного</title>
+    <title>Детали страны</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -41,14 +41,14 @@
 
 <div class="container">
     <div class="animal-details-container">
-        <h1 class="animal-title">Детали животного</h1>
+        <h1 class="animal-title">Детали страны</h1>
         <div class="animal-info">
-            <p><strong>ID:</strong> <span th:text="${animal.getId()}"></span></p>
-            <p><strong>Название:</strong> <span th:text="${animal.getName()}"></span></p>
-            <p><strong>Тип:</strong> <span th:text="${animal.getType()}"></span></p>
-            <p><strong>Количество:</strong> <span th:text="${animal.getAmount()}"></span></p>
+            <p><strong>ID:</strong> <span th:text="${country.getId()}"></span></p>
+            <p><strong>Название:</strong> <span th:text="${country.getName()}"></span></p>
+            <p><strong>Код:</strong> <span th:text="${country.getCode()}"></span></p>
+            <p><strong>Население:</strong> <span th:text="${country.getPopulation()}"></span></p>
         </div>
-        <a href="/animal" class="btn btn-back mt-4">Назад</a>
+        <a href="/countries" class="btn btn-back mt-4">Назад</a> <!-- Кнопка "Назад" работает -->
     </div>
 </div>
 
