--- a/src/main/resources/templates/games/gameList.html
+++ b/src/main/resources/templates/games/gameList.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Все животные</title>
+    <title>Все игры</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .table-container {
@@ -63,32 +63,32 @@
 
 <div class="container mt-5">
     <div class="table-container">
-        <h1 class="mb-4 text-center">Все животные</h1>
+        <h1 class="mb-4 text-center">Все игры</h1>
         <table class="table table-hover">
             <thead class="table-dark">
             <tr>
                 <th>ID</th>
                 <th>Название</th>
-                <th>Тип</th>
-                <th>Количество</th>
+                <th>Описание</th>
+                <th>Онлайн</th>
                 <th>Действия</th>
             </tr>
             </thead>
             <tbody>
-            <tr th:each="animal : ${animals}">
-                <td th:text="${animal.id}"></td>
-                <td th:text="${animal.name}"></td>
-                <td th:text="${animal.type}"></td>
-                <td th:text="${animal.amount}"></td>
+            <tr th:each="game : ${games}">
+                <td th:text="${game.id}"></td>
+                <td th:text="${game.name}"></td>
+                <td th:text="${game.description}"></td>
+                <td th:text="${game.online}"></td>
                 <td class="action-buttons">
                     <!-- Кнопка редактирования -->
-                    <a th:href="@{/animal/edit/{id}(id=${animal.id})}" class="btn btn-edit">Редактировать</a>
+                    <a th:href="@{/games/edit/{id}(id=${game.id})}" class="btn btn-edit">Редактировать</a>
 
                     <!-- Кнопка детальной информации -->
-                    <a th:href="@{/animal/{id}(id=${animal.id})}" class="btn btn-details">Подробнее</a>
+                    <a th:href="@{/games/{id}(id=${game.id})}" class="btn btn-details">Подробнее</a>
 
                     <!-- Кнопка удаления -->
-                    <form th:method="delete" th:action="@{'/animal/' + ${animal.id}}" style="display:inline;">
+                    <form th:method="delete" th:action="@{'/games/' + ${game.id}}" style="display:inline;">
                         <button type="submit" class="btn btn-delete">Удалить</button>
                     </form>
                 </td>
@@ -97,7 +97,7 @@
         </table>
 
         <div class="text-center mt-4">
-            <a href="/animal/create" class="btn btn-create">Добавить животное</a>
+            <a href="/games/create" class="btn btn-create">Добавить пиццу</a>
         </div>
     </div>
 </div>
