--- a/src/main/resources/templates/pizza/pizzaAdd.html
+++ b/src/main/resources/templates/pizza/pizzaAdd.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Добавить животное</title>
+    <title>Добавить пиццу</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -39,20 +39,20 @@
 
 <div class="container mt-5">
     <div class="form-container mx-auto col-md-6">
-        <h1 class="mb-4 text-center">Добавить животное</h1>
-        <form action="/animal" method="post" class="row g-3">
+        <h1 class="mb-4 text-center">Добавить пиццу</h1>
+        <form action="/pizza" method="post" class="row g-3">
             <div class="col-md-12">
                 <input type="text" name="name" class="form-control" placeholder="Введите название" required>
             </div>
             <div class="col-md-12">
-                <input type="text" name="type" class="form-control" placeholder="Введите тип" required>
+                <input type="number" name="price" class="form-control" placeholder="Введите цену" required>
             </div>
             <div class="col-md-12">
-                <input type="number" name="amount" class="form-control" placeholder="Количество" step="1" required>
+                <input type="number" name="size" class="form-control" placeholder="размер" step="1" required>
             </div>
             <div class="col-12 text-center">
                 <button type="submit" class="btn btn-custom">Добавить</button>
-                <a href="/animal" class="btn btn-secondary">Назад</a>
+                <a href="/pizza" class="btn btn-secondary">Назад</a> <!-- Работает как ссылка -->
             </div>
         </form>
     </div>
