--- a/src/main/resources/templates/people/personDetail.html
+++ b/src/main/resources/templates/people/personDetail.html
@@ -48,7 +48,7 @@
       <p><strong>Фамилия:</strong> <span th:text="${person.getSurname()}"></span></p>
       <p><strong>Возраст:</strong> <span th:text="${person.getAge()}"></span></p>
     </div>
-    <a href="/pizza" class="btn btn-back mt-4">Назад</a> <!-- Кнопка "Назад" работает -->
+    <a href="/people" class="btn btn-back mt-4">Назад</a> <!-- Кнопка "Назад" работает -->
   </div>
 </div>
 
