--- a/src/main/resources/templates/games/gameList.html
+++ b/src/main/resources/templates/games/gameList.html
@@ -64,6 +64,14 @@
 <div class="container mt-5">
     <div class="table-container">
         <h1 class="mb-4 text-center">Все игры</h1>
+
+        <form action="/games/search" method="get" class="mb-4">
+            <div class="input-group">
+                <input type="text" class="form-control" name="keyword" placeholder="Поиск по имени" required>
+                <button class="btn btn-outline-secondary" type="submit">Поиск</button>
+            </div>
+        </form>
+
         <table class="table table-hover">
             <thead class="table-dark">
             <tr>
