--- a/src/main/resources/templates/teams/teamList.html
+++ b/src/main/resources/templates/teams/teamList.html
@@ -77,8 +77,9 @@
       <tr>
         <th>ID</th>
         <th>Название</th>
-        <th>Тип</th>
-        <th>Количество</th>
+        <th>Тренер</th>
+        <th>Игроки</th>
+        <th>Спонсоры</th>
         <th>Действия</th>
       </tr>
       </thead>
