--- a/src/main/resources/templates/players/playerList.html
+++ b/src/main/resources/templates/players/playerList.html
@@ -105,7 +105,7 @@
         </table>
 
         <div class="text-center mt-4">
-            <a href="/players/create" class="btn btn-create">Добавить животное</a>
+            <a href="/players/create" class="btn btn-create">Добавить игрока</a>
         </div>
     </div>
 </div>
