--- a/src/main/resources/templates/sponsors/sponsorList.html
+++ b/src/main/resources/templates/sponsors/sponsorList.html
@@ -103,7 +103,7 @@
         </table>
 
         <div class="text-center mt-4">
-            <a href="/sponsors/create" class="btn btn-create">Добавить животное</a>
+            <a href="/sponsors/create" class="btn btn-create">Добавить спонсора</a>
         </div>
     </div>
 </div>
