--- a/src/main/resources/templates/players/playerDetail.html
+++ b/src/main/resources/templates/players/playerDetail.html
@@ -45,7 +45,7 @@
         <div class="animal-info">
             <p><strong>ID:</strong> <span th:text="${player.getId()}"></span></p>
             <p><strong>Название:</strong> <span th:text="${player.getName()}"></span></p>
-            <p><strong>Позиция:</strong> <span th:text="${player.getPosition()()}"></span></p>
+            <p><strong>Позиция:</strong> <span th:text="${player.getPosition()}"></span></p>
             <p><strong>Команда:</strong> <span th:text="${player.getTeam().getName()}"></span></p>
         </div>
         <a href="/players" class="btn btn-back mt-4">Назад</a>
