--- a/src/main/resources/templates/sponsors/sponsorDetail.html
+++ b/src/main/resources/templates/sponsors/sponsorDetail.html
@@ -45,7 +45,7 @@
         <div class="animal-info">
             <p><strong>ID:</strong> <span th:text="${sponsor.getId()}"></span></p>
             <p><strong>Имя:</strong> <span th:text="${sponsor.getName()}"></span></p>
-            <p><strong>Сфера:</strong> <span th:text="${sponsor.getType()}"></span></p>
+            <p><strong>Сфера:</strong> <span th:text="${sponsor.getIndustry()}"></span></p>
         </div>
         <a href="/sponsors" class="btn btn-back mt-4">Назад</a>
     </div>
